# dmntk.atto.rs

./: CHANGELOG.md  Cargo.toml  README.md  TODO.md  Taskfile.yml  coverage.sh  manual_tests.sh
examples/: e1.dtb
src/: actions.rs  editor.rs  errors.rs  keys.rs  main.rs  plane.rs  utils.rs
src/tests/: action_delete.rs  action_insert.rs  action_move.rs  mod.rs  model_plane.rs  split_line.rs
