[package]
name = "dmntk-atto"
version = "0.3.5"
authors = ["Dariusz Depta <depta@engos.de>"]
description = "DMNTK | Decision table editor"
documentation = "https://docs.rs/dmntk-atto"
repository = "https://github.com/dmntk/dmntk.atto.rs.git"
license = "MIT OR Apache-2.0"
edition = "2021"

[[bin]]
name = "atto"
path = "src/main.rs"

[dependencies]
clap = "4.5.4"
ncurses = { version = "6.0.0", features = ["wide", "extended_colors"] }

[dev-dependencies]
difference = "2.0.0"
